<resources>
    <string name="app_name">ADES</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="connection">Connection</string>
    <string name="please_select_adaper">Please? select your Bluetooth Adapter below to connect ot A.D.E.S</string>
    <string name="connection_expl">Your car should be not further that 3 meters from yur phone</string>
    <string name="devices_found">Devices found</string>
    <string name="connect">Connect</string>
    <string name="my_car">My Car</string>
</resources>
