<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/deviceSelectionFragment"
            android:icon="@drawable/ic_settings_bluetooth_black_24dp"
            android:title="@string/connect" />
        <item
            android:id="@+id/myCarFragment"
            android:icon="@drawable/ic_directions_car_black_24dp"
            android:title="@string/my_car" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
    </group>



</menu>
